Upgrade to Java 17 Code cleanup Added test